syntax = "proto3";

package ultpb;

message LedgerHeader {
  // version of pb message, each time we update the pb message definition, the
  // version number will incremented. The specific version number to use is 
  // hard coded and changed each time we do some changes.  
  uint32 Version = 1;
  // hash of the previous ledger
  string PrevLedgerHash = 2;
  // hash of the transaction list in this ledger
  string TxListHash = 3;
  // maximun number of transactions allowed in a transaction list
  uint32 MaxTxListSize = 4;
  // sequence number of this ledger
  uint64 SeqNum = 5;
  // total number of tokens in existence
  uint64 TotalTokens = 6;
  // base fee per operation
  uint64 BaseFee = 7;
  // base reserver for an account
  uint64 BaseReserve = 8;
}
